--- a/app/components/shared/Card/styles.module.css
+++ b/app/components/shared/Card/styles.module.css
@@ -29,6 +29,10 @@
   flex-wrap: wrap;
   flex-direction: column;
   gap: var(--spacing-md);
+
+  @media screen and (min-width: 1280px) {
+    width: auto;
+  }
 }
 .cardCodeStatus {
   width: 100%;
